fix description text-align in MoreInfo

--- a/src/barTab/moreInfo/style.module.scss
+++ b/src/barTab/moreInfo/style.module.scss
@@ -31,6 +31,7 @@
         color: #ffffff;
         margin-bottom: 0.75rem;
         max-width: 20.5rem;
+        text-align: left;
     }
 
     li {
